# chivo

./: .env.example  Addition.md  App.tsx  CONTRACTS-PRODUCTION.md  CONTRACTS-TESTNET.md  CONTRACTS.md  README-2.0.md  README.md  app.json  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  admin.tsx  index.tsx  learn.tsx  teach.tsx
app/(auth)/: _layout.tsx  forgot.tsx  login.tsx  register.tsx
app/(tabs)/: _layout.tsx  account.tsx  company.tsx  create.tsx  crews.tsx  discover.tsx  home.tsx  join.tsx  knowledge.tsx  marketplace.tsx  notifications.tsx  publish.tsx  request.tsx  research.tsx
chivo-evm/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
chivo-sol/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
chivo-sol/programs/chivo_payments/: Cargo.toml
chivo-sol/programs/chivo_payments/src/: lib.rs
chivo-sui/: .env.example  .gitignore  Move.toml  README.md  package.json
src/: types.ts
supabase/: dev-reset.sql  group1-upgrade.sql  group10-crew-study-upgrade.sql  group11-classroom-study-upgrade.sql  group12-ai-chat-memory-upgrade.sql  group13-monetization-controls-upgrade.sql  group14-chain-rail-registry-upgrade.sql  group15-knowledge-ownership-monetization.sql  group16-knowledge-social-network-upgrade.sql  group2-upgrade.sql  group3-audio-upgrade.sql  group4-progress-upgrade.sql  group5-class-flow-upgrade.sql  group6-usernames-upgrade.sql  group7-platform-controls-upgrade.sql  group8-crews-upgrade.sql  group9-activity-upgrade.sql
(+120 files in other folders)
